fix: double border on topic-tag fixes #907
* remove topic-tag from border rule
* add topic-tag to box shadow: inset
* re-add higher specificity topic-tag-outline

This ensures both rules get to work unincumbered by each other.

--- a/github-dark.css
+++ b/github-dark.css
@@ -2763,6 +2763,10 @@
   }
   .topic-tag {
     padding: .2em .9em !important;
+    box-shadow: inset 0 0 0 1px #246 !important;
+  }
+  .topic-tag.topic-tag-outline {
+    box-shadow: inset 0 0 0 1px #6d7c9c !important;
   }
   /* invisible border */
   .gisttabs a:not(.selected), .gisttabs a:not(.selected):hover,
